Niall - added Unit test: exhibit_counter_test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/plan_btn"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#87B37A"
