--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -11,6 +11,7 @@
         android:id="@+id/exhibit_text"
         android:layout_width="409dp"
         android:layout_height="729dp"
+        android:layout_centerVertical="true"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
