--- a/app/src/main/res/layout/exhibit_distance.xml
+++ b/app/src/main/res/layout/exhibit_distance.xml
@@ -12,6 +12,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:text="Directions"
+        android:textSize="32dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
