--- a/app/src/main/res/layout/directions_card_item.xml
+++ b/app/src/main/res/layout/directions_card_item.xml
@@ -58,6 +58,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
+                    android:isScrollContainer="true"
                     android:text="@string/directions_desc"
                     android:textColor="#000000"
                     android:textSize="17sp" />
