--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -9,22 +9,21 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/exhibit_text"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="409dp"
+        android:layout_height="650dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop ="10dp"
+        app:layout_constraintBottom_toTopOf="@id/begin_directions_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_editor_absoluteX="1dp"
+        app:layout_editor_absoluteY="1dp" />
 
     <Button
         android:id="@+id/begin_directions_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:onClick="onBeginDirectionsClicked"
         android:text="Begin Directions"
         app:layout_constraintBottom_toBottomOf="parent"
