--- a/app/src/main/res/layout/directions_card_item.xml
+++ b/app/src/main/res/layout/directions_card_item.xml
@@ -59,6 +59,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
                     android:isScrollContainer="true"
+                    android:scrollbars="vertical"
                     android:text="@string/directions_desc"
                     android:textColor="#000000"
                     android:textSize="17sp" />
