--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -47,13 +47,13 @@
 
     <Button
         android:id="@+id/next_btn"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="#87B37A"
         android:drawableTop="@android:drawable/ic_media_ff"
         android:onClick="onNextBtnClicked"
         android:text="@string/next"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
@@ -61,14 +61,14 @@
 
     <Button
         android:id="@+id/prev_btn"
-        android:layout_width="100sp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="#87B37A"
         android:drawableTop="@android:drawable/ic_media_rew"
         android:onClick="onPrevBtnClicked"
         android:text="@string/previous"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
