--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -28,6 +28,7 @@
         android:layout_height="450dp"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/back"
+        android:elevation="5dp"
         android:padding="20dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
