--- a/app/src/main/res/layout/activity_search_select.xml
+++ b/app/src/main/res/layout/activity_search_select.xml
@@ -8,20 +8,6 @@
     tools:context=".activities.search_select.SearchSelectActivity">
 
 
-    <TextView
-        android:id="@+id/selection_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Your exhibits:"
-        android:textColor="#707070"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/selected_items"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.931" />
-
     <AutoCompleteTextView
         android:id="@+id/search_bar"
         android:layout_width="333dp"
@@ -45,16 +31,30 @@
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/back"
         android:elevation="5dp"
         android:padding="20dp"
-        android:background="@drawable/back"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/exhibit_counter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_bar"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/selection_caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your exhibits:"
+        android:textColor="#707070"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/selected_items"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
 
     <Button
         android:id="@+id/speech_button"
