--- a/app/src/main/res/layout/selected_item.xml
+++ b/app/src/main/res/layout/selected_item.xml
@@ -14,7 +14,7 @@
         android:textColor="#000000"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delete_selection"
+        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,16 +30,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/delete_selection"
-        android:layout_width="48dp"
-        android:layout_height="34dp"
-        android:backgroundTint="#00FFFFFF"
-        android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
-        android:drawablePadding="0dp"
-        android:drawableTint="#000000"
-        android:outlineProvider="none"
+    <TextView
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="onDeleteButtonClicked"
+        android:text="×"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.959"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
