--- a/app/src/main/res/layout/activity_search_select.xml
+++ b/app/src/main/res/layout/activity_search_select.xml
@@ -110,4 +110,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/clear_all_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:onClick="onClearAllBtnClicked"
+        android:text="Clear Selection"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/selected_items"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.897"
+        app:layout_constraintStart_toEndOf="@+id/selection_caption"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
